test/mpi/errors/comm/Makefile.sm
INCLUDES = -I../../include -I${top_srcdir}/include
LDADD = ../../util/mtest.o
DEPADD = @MPILIBLOC@ ../../util/mtest.o
smvar_do_sharedlibs = 0

cfree_SOURCES     = cfree.c
ccreate1_SOURCES  = ccreate1.c
manysplit_SOURCES = manysplit.c
userdup_SOURCES   = userdup.c

../../util/mtest.o:
	(cd ../../util && $(MAKE) mtest.o )

# A special testing target to simplify running just the pt2pt tests
testing:
	../../runtests -srcdir=$(srcdir) -tests=testlist \
		   -mpiexec=$(bindir)/mpiexec \
		   -xmlfile=summary.xml
clean-local:
	-rm -f summary.xml
